--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
         <section id="contact" class="py-12 md:py-16 bg-gray-100 rounded-lg shadow-md mx-4 md:mx-auto max-w-6xl mt-8 p-6" aria-labelledby="contact-title">
             <div class="container mx-auto px-4">
                 <h2 id="contact-title" class="text-2xl sm:text-3xl font-bold text-gray-900 section-title">Contact Us</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8">
-                    <div class="bg-white p-6 rounded-lg shadow-lg" aria-labelledby="get-in-touch-title">
+                <div class="flex justify-center"> <!-- Centering the single contact info block -->
+                    <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md" aria-labelledby="get-in-touch-title"> <!-- Added max-w-md for better single column appearance -->
                         <h3 id="get-in-touch-title" class="text-xl font-semibold text-hanpurple-600 mb-4">Get in Touch</h3>
                         <p class="text-gray-700 mb-3 flex items-center text-sm md:text-base">
                             <svg class="w-5 h-5 mr-2 text-hanpurple-500 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path fill-rule="evenodd" d="M10 2a8 8 0 100 16 8 8 0 000-16zM9 9a1 1 0 112 0v4a1 1 0 11-2 0V9zm0-3a1 1 0 112 0 1 1 0 01-2 0z" clip-rule="evenodd"></path></svg>
@@ -268,25 +268,6 @@
                             <strong>Address:</strong> <span class="ml-2">Nyati Estate, Shop No 5, Near Nyati Estate, Mohamadwadi, Pune-411060</span>
                         </p>
                     </div>
-                    <div class="bg-white p-6 rounded-lg shadow-lg" aria-labelledby="send-message-title">
-                        <h3 id="send-message-title" class="text-xl font-semibold text-hanpurple-600 mb-4">Send Us a Message</h3>
-                        <form id="contactForm" class="space-y-4" aria-live="polite">
-                            <div>
-                                <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
-                                <input type="text" id="name" name="name" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-hanpurple-500 focus:border-hanpurple-500 sm:text-sm text-gray-900" placeholder="Your Name" required aria-required="true">
-                            </div>
-                            <div>
-                                <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                                <input type="email" id="email" name="email" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-hanpurple-500 focus:border-hanpurple-500 sm:text-sm text-gray-900" placeholder="your.email@example.com" required aria-required="true">
-                            </div>
-                            <div>
-                                <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
-                                <textarea id="message" name="message" rows="4" class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-hanpurple-500 focus:border-hanpurple-500 sm:text-sm text-gray-900" placeholder="Your message..." required aria-required="true"></textarea>
-                            </div>
-                            <button type="submit" class="w-full bg-hanpurple-600 text-white py-2 px-4 rounded-md hover:bg-hanpurple-700 focus:outline-none focus:ring-2 focus:ring-hanpurple-500 focus:ring-offset-2 transition duration-300">Send Message</button>
-                            <div id="formMessage" class="mt-4 text-center text-sm font-medium" role="status"></div>
-                        </form>
-                    </div>
                 </div>
             </div>
         </section>
@@ -300,10 +281,10 @@
                     <address class="text-lg md:text-xl font-semibold text-hanpurple-700 not-italic mb-6">
                         Nyati Estate, Shop No 5, Near Nyati Estate, Mohamadwadi, Pune-411060
                     </address>
-                    <!-- Google Map Embed -->
-                    <a href="https://maps.app.goo.gl/YourActualGoogleMapsLink" target="_blank" rel="noopener noreferrer" class="block w-full h-64 md:h-96 bg-gray-200 rounded-lg overflow-hidden shadow-md group relative" aria-label="View our location on Google Maps">
+                    <!-- Google Map Embed - Updated with correct embed and direct link -->
+                    <a href="https://www.google.com/maps/search/?api=1&query=Expert+Dry+Cleaners+Nyati+Estate,+Shop+No+5,+Near+Nyati+Estate,+Mohamadwadi,+Pune-411060" target="_blank" rel="noopener noreferrer" class="block w-full h-64 md:h-96 bg-gray-200 rounded-lg overflow-hidden shadow-md group relative" aria-label="View our location on Google Maps">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.9202167084535!2d73.9056157753719!3d18.48425978257008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2e93b9e4a8227%3A0xc02c34c2d4a2a16d!2sNyati%20Estate%2C%20Shop%20No%205%2C%20Near%20Nyati%20Estate%2C%20Mohamadwadi%2C%20Pune-411060!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.388722424508!2d73.91840077388538!3d18.466043382616988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2eb8ac64b525b%3A0x617f9c55d79c032!2sExpert%20Dry%20Cleaners!5e0!3m2!1sen!2sin!4v1753002627830!5m2!1sen!2sin"
                             width="100%"
                             height="100%"
                             style="border:0;"
@@ -449,31 +430,6 @@
                             mobileMenuButton.click(); // Simulate click to close menu
                         }
                     });
-                });
-            }
-
-            // Handle contact form submission with a message (instead of an alert or page reload)
-            const contactForm = document.getElementById('contactForm');
-            if (contactForm) {
-                contactForm.addEventListener('submit', function(event) {
-                    event.preventDefault(); // Prevent default form submission and page reload
-
-                    const formMessage = document.getElementById('formMessage');
-                    formMessage.classList.remove('text-red-500', 'text-green-500'); // Clear previous styles
-
-                    // Simulate form submission success
-                    formMessage.textContent = 'Thank you for your message! We will get back to you soon.';
-                    formMessage.classList.add('text-green-500'); // Success message color
-                    formMessage.setAttribute('aria-live', 'polite'); // Announce message to screen readers
-
-                    // Clear the form fields after a short delay
-                    setTimeout(() => {
-                        document.getElementById('name').value = '';
-                        document.getElementById('email').value = '';
-                        document.getElementById('message').value = '';
-                        formMessage.textContent = ''; // Clear message after clearing form
-                        formMessage.removeAttribute('aria-live'); // Remove aria-live once message is gone
-                    }, 3000); // Clear after 3 seconds
                 });
             }
         });
