--- a/index.html
+++ b/index.html
@@ -665,6 +665,15 @@
       }
     }
   </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8KFVS66WM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Q8KFVS66WM', { 'stream_id': '12178624929' });
+  </script>
 </head>
 <body>
   <!-- Header -->
